# lang-detect

./: .env.example  .gitignore  README.md  coordinator.py  main.py  pyproject.toml  requirements.txt
connectors/: elevenlabs_connector.py  gemini_connector.py  openai_connector.py  sarvam_connector.py
